--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,22 @@
     font-family: Verdana, sans-serif;
     font-size: 24px;
 }
+h1, h2, h3 {
+    font-weight: bold;
+    color: white;
+    background-color: black;
+}
 
 h1 {
     font-size: 36px;
-    font-weight: bold;
+}
+
+h2 {
+    font-size: 28px;
+    background-color: #3464e6;
+    
+}
+
+h3 {
+    background-color: gray;
 }
